# WaveSimulation

./: .gitignore  AudioWaveSimC++.code-workspace  CMakeLists.txt  LICENSE  README.md  config.py  grid.py  main.cpp  main.py  physics.py  requirements.txt  visualization.py
shaders/: SimpleFrag.glsl  SimpleVert.glsl  Wave.comp
src/: Physics.cpp  Physics.h  SimulationGrid.cpp  SimulationGrid.h  Visualizer.cpp  Visualizer.h  WaveSimulation.cpp  WaveSimulation.h
